Change role buttons from Warrior to Fighter and Marksman to Carry

--- a/index.html
+++ b/index.html
@@ -226,10 +226,10 @@ img{display:block;width:100%;height:100%;object-fit:cover}
   <div class="roles">
     <button class="role-btn on" data-r="all"      onclick="setRole('all')">🎯 ทั้งหมด</button>
     <button class="role-btn" data-r="Tank"         onclick="setRole('Tank')">🛡️ Tank</button>
-    <button class="role-btn" data-r="Warrior"      onclick="setRole('Warrior')">⚔️ Warrior</button>
+    <button class="role-btn" data-r="Fighter"      onclick="setRole('Fighter')">⚔️ Fighter</button>
     <button class="role-btn" data-r="Assassin"     onclick="setRole('Assassin')">🗡️ Assassin</button>
     <button class="role-btn" data-r="Mage"         onclick="setRole('Mage')">🔮 Mage</button>
-    <button class="role-btn" data-r="Marksman"     onclick="setRole('Marksman')">🏹 Marksman</button>
+    <button class="role-btn" data-r="Carry"     onclick="setRole('Carry')">🏹 Carry</button>
     <button class="role-btn" data-r="Support"      onclick="setRole('Support')">💚 Support</button>
   </div>
   <div class="hero-grid" id="heroGrid"></div>
